--- a/style.css
+++ b/style.css
@@ -1,50 +1,63 @@
 /* Basic Style */
+
 .body {
     background-color: #f8f8f8;
     color: #333;
     font-family: Lato, sans-serif;
 }
+
 .header {
     width: 500px;
     margin: 0 auto;
     display: block;
     text-align: right;
 }
+
 .image {
     width: 100%;
 }
+
 .header .more-inf {
     font-family: fantasy, cursive;
 }
 
 @media (max-width:768px) {
-.header { text-align: center;
+
+.header { 
+    text-align: center;
 }
+
 }
 .main-container {
     display: block;
     width: 500px;
     margin: 0 auto 0;
 }
+
 .task {
     width: 56%;
     display: inline-block;
     flex-grow: 1
 }
+
 .row-add-task {
     display: flex;
 }
+
 #incomplete-tasks,
 #completed-tasks {
     margin:0;
     padding: 0px;
 }
+
 .task-item {
     list-style:none;
 }
+
 .task .button{
     outline:none;
 }
+
 .button {
     background: none;
     border: 0px;
@@ -54,10 +67,13 @@
     font-family: Lato, sans-serif;
     cursor: pointer;
 }
+
 .button:hover {
     color: #3a3A3a;
 }
+
 /* Heading */
+
 .h3,
 .label-new-task {
     color: #333;
@@ -68,6 +84,7 @@
     margin: 0;
     text-transform: uppercase;
 }
+
 .input-task {
     margin: 0;
     font-size: 18px;
@@ -80,20 +97,24 @@
     font-family: Lato, sans-serif;
     color: #888;
 }
+
 .input-task:focus {
     color: #333;
 }
 
 /* New Task */
+
 .label-new-task {
     display: block;
     margin: 0 0 20px;
 }
+
 #new-task {
     width: 318px;
 }
 
 /* Task list */
+
 .li {
     overflow: hidden;
     padding: 20px 0;
@@ -103,6 +124,7 @@
     justify-content: space-between;
     align-items: center;
 }
+
 .li > * {
     vertical-align: middle;
 }
@@ -110,25 +132,30 @@
 .li > .checkbox {
     margin: 0 10px;
 }
+
 .li > .label-task {
     padding-left: 10px;
     box-sizing: border-box;
     font-size: 18px;
     width: 226px;
 }
+
 .li > .text {
     width: 226px
 }
+
 .delete img {
     height: 2em;
     transform: rotateZ(45deg);
     transition: transform 200ms ease-in;
 }
+
 .delete img:hover {
     transform: rotateZ(0);
 }
 
 /* Completed */
+
 #completed-tasks .label-task {
     text-decoration: line-through
     color: #888;
