--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@
 .task {
     width: 56%;
     display: inline-block;
-    flex-grow: 1
+    flex-grow: 1;
 }
 
 .row-add-task {
@@ -141,7 +141,7 @@
 }
 
 .li > .text {
-    width: 226px
+    width: 226px;
 }
 
 .delete img {
@@ -157,18 +157,18 @@
 /* Completed */
 
 #completed-tasks .label-task {
-    text-decoration: line-through
+    text-decoration: line-through;
     color: #888;
 }
 
 /* Edit Task */
 .input-task {
-    display: none
+    display: none;
 }
 
 .edit-mode .input-task {
     display: inline-block;
-    width: 224px
+    width: 224px;
 }
 
 .edit-mode .label-task {
