--- a/style.css
+++ b/style.css
@@ -13,11 +13,11 @@
     text-align: right;
 }
 
-.image {
+.header__image {
     width: 100%;
 }
 
-.header .more-inf {
+.header .header__link {
     font-family: fantasy, cursive;
 }
 
@@ -74,7 +74,7 @@
 
 /* Heading */
 
-.h3 .label-new-task {
+.block__title .label-new-task {
     color: #333;
     font-weight: 700;
     font-size: 15px;
@@ -143,13 +143,13 @@
     width: 226px;
 }
 
-.delete img {
+.button__delete img {
     height: 2em;
     transform: rotateZ(45deg);
     transition: transform 200ms ease-in;
 }
 
-.delete img:hover {
+.button__delete img:hover {
     transform: rotateZ(0);
 }
 
